fixing animation issues on mobile

--- a/style.css
+++ b/style.css
@@ -427,51 +427,51 @@ input:checked + .switch-left + .switch-right::before {
 @-webkit-keyframes wiggle {
   0%,
   7% {
-    transform: rotateY(180deg) rotateZ(0);
+    transform: rotateZ(0) rotateY(180deg);
   }
   15% {
-    transform: rotateY(180deg) rotateZ(-15deg);
+    transform: rotateZ(-15deg) rotateY(180deg);
   }
   20% {
-    transform: rotateY(180deg) rotateZ(10deg);
+    transform: rotateZ(10deg) rotateY(180deg);
   }
   25% {
-    transform: rotateY(180deg) rotateZ(-10deg);
+    transform: rotateZ(-10deg) rotateY(180deg);
   }
   30% {
-    transform: rotateY(180deg) rotateZ(6deg);
+    transform: rotateZ(6deg) rotateY(180deg);
   }
   35% {
-    transform: rotateY(180deg) rotateZ(-4deg);
+    transform: rotateZ(-4deg) rotateY(180deg);
   }
   40%,
   100% {
-    transform: rotateY(180deg) rotateZ(0);
+    transform: rotateZ(0) rotateY(180deg);
   }
 }
 @keyframes wiggle {
   0%,
   7% {
-    transform: rotateY(180deg) rotateZ(0);
+    transform: rotateZ(0) rotateY(180deg);
   }
   15% {
-    transform: rotateY(180deg) rotateZ(-15deg);
+    transform: rotateZ(-15deg) rotateY(180deg);
   }
   20% {
-    transform: rotateY(180deg) rotateZ(10deg);
+    transform: rotateZ(10deg) rotateY(180deg);
   }
   25% {
-    transform: rotateY(180deg) rotateZ(-10deg);
+    transform: rotateZ(-10deg) rotateY(180deg);
   }
   30% {
-    transform: rotateY(180deg) rotateZ(6deg);
+    transform: rotateZ(6deg) rotateY(180deg);
   }
   35% {
-    transform: rotateY(180deg) rotateZ(-4deg);
+    transform: rotateZ(-4deg) rotateY(180deg);
   }
   40%,
   100% {
-    transform: rotateY(180deg) rotateZ(0);
+    transform: rotateZ(0) rotateY(180deg);
   }
 }
 
@@ -555,12 +555,25 @@ input:checked + .switch-left + .switch-right::before {
   transform: rotate(360deg);
   transition: transform 0s;
 }
-.memory-card.pop_in {
+/* .memory-card.pop_in {
   -webkit-animation: zoom-in-zoom-out 0.5s 1;
   animation: zoom-in-zoom-out 0.5s 1;
   -webkit-animation-delay: 0.4s;
   animation-delay: 0.4s;
+} */
+
+.front-face.pop_in {
+  -webkit-animation: wiggle 0.5s 1;
+  animation: wiggle 0.5s 1;
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
 }
+/* .front-face.pop_in {
+  -webkit-animation: zoom-in-zoom-out 0.5s 1;
+  animation: zoom-in-zoom-out 0.5s 1;
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+} */
 
 .img {
   width: 100%;
